# cmake_rnnoise

./: CMakeLists.txt  README.md  build_ios.sh  config.h  configure  copyRnnoiseSrcFiles.bat
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle  consumer-rules.pro  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  rnnoise_jni.c
android/app/src/main/java/org/xiph/rnnoise/: RnnoiseJni.java
autom4te.cache/: output.0  output.3  requests  traces.0  traces.2
include/: unistd.h
modelFetch/: autogen.bat  download_model.bat
src/: copyRnnoiseSrcFiles.bat
tools/: rnnoise_smoke.c
